[package]
name = "get_epoch_and_store_in_postgres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1.16.17"
solana-metrics = "1.16.17"
solana-rpc-client = "1.16.17"
solana-runtime = "1.16.17"
solana-sdk = "1.16.17"
solana-clap-utils = "1.16.17"
solana-cli-config = "1.16.17"
solana-net-utils = "1.16.17"
solana-version = "1.16.17"
solana-logger = "1.16.17"
solana-transaction-status = "1.16.17"
solana-account-decoder = "1.16.17"

itertools = "0.10.5"
anyhow = "1.0"
arrayref = "*"
async-std = "1.12.0"
async-channel = "1.6"
async-trait = "0.1.66"
borsh = "0.9.3"
bytemuck = "1.7.2"
chrono = "0.4.19"
clap = "2.33.1"
csv-async = "1.2"
dashmap = "5.4.0"
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
futures = "0.3.28"
iter_tools = "0.1.4"
log = "0.4.14"
rand = ">=0.8.5"
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.103"
serde_json = "1.0.79"
thiserror = "1.0"
tokio = { version = "1.14.1", features = ["full"] }
regex = "1.7.3"
bincode = "1.3.3"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }